tests/baselines/reference/collisionExportsRequireAndModule.errors.txt
error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
collisionExportsRequireAndModule_externalmodule.ts(1,15): error TS2441: Duplicate identifier 'require'. Compiler reserves name 'require' in top level scope of a module.
collisionExportsRequireAndModule_externalmodule.ts(10,15): error TS2441: Duplicate identifier 'exports'. Compiler reserves name 'exports' in top level scope of a module.


!!! error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== collisionExportsRequireAndModule_externalmodule.ts (2 errors) ====
    export module require {
                  ~~~~~~~
!!! error TS2441: Duplicate identifier 'require'. Compiler reserves name 'require' in top level scope of a module.
        export interface I {
        }
        export class C {
        }
    }
    export function foo(): require.I {
        return null;
    }
    export module exports {
                  ~~~~~~~
!!! error TS2441: Duplicate identifier 'exports'. Compiler reserves name 'exports' in top level scope of a module.
        export interface I {
        }
        export class C {
        }
    }
    export function foo2(): exports.I {
        return null;
    }
    module m1 {
        module require {
            export interface I {
            }
            export class C {
            }
        }
        module exports {
            export interface I {
            }
            export class C {
            }
        }
    }
    module m2 {
        export module require {
            export interface I {
            }
            export class C {
            }
        }
        export module exports {
            export interface I {
            }
            export class C {
            }
        }
    }
    
==== collisionExportsRequireAndModule_globalFile.ts (0 errors) ====
    module require {
        export interface I {
        }
        export class C {
        }
    }
    module exports {
        export interface I {
        }
        export class C {
        }
    }
    module m3 {
        module require {
            export interface I {
            }
            export class C {
            }
        }
        module exports {
            export interface I {
            }
            export class C {
            }
        }
    }
    module m4 {
        export module require {
            export interface I {
            }
            export class C {
            }
        }
        export module exports {
            export interface I {
            }
            export class C {
            }
        }
    }
    